added memory testing to parameter tuning

--- a/test_notebooks/decode_spim_frame_time_contrastive.ipynb
+++ b/test_notebooks/decode_spim_frame_time_contrastive.ipynb
@@ -74,14 +74,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CEBRA(conditional='time', learning_rate=0.0001, max_iterations=15000,\n",
+      "CEBRA(conditional='time', learning_rate=0.0001,\n",
       "      model_architecture='offset10-model', output_dimension=3,\n",
       "      temperature_mode='auto', time_offsets=10, verbose=True)\n"
      ]
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -182,14 +182,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "pos:  0.3545 neg:  7.7933 total:  8.1478 temperature:  1.1628: 100%|██████████| 15000/15000 [06:10<00:00, 40.46it/s]\n"
+      "pos:  0.3976 neg:  7.9014 total:  8.2990 temperature:  1.1301: 100%|██████████| 10000/10000 [05:23<00:00, 30.94it/s]\n"
      ]
     }
    ],
