--- a/test_notebooks/decode_eye_pos_time_contrastive.ipynb
+++ b/test_notebooks/decode_eye_pos_time_contrastive.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,11 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # gobal params\n",
     "# # global params\n",
     "\n",
     "# list of all data files\n",
@@ -63,16 +62,18 @@
     "global TIMESTEPS\n",
     "global ROIS\n",
     "global ITERS\n",
+    "global LOAD\n",
     "\n",
     "FILENAME = dat_files[0]\n",
     "TIMESTEPS = 15000\n",
     "ROIS = 10000\n",
-    "ITERS = 15000"
+    "ITERS = 15000\n",
+    "LOAD = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -117,108 +118,124 @@
      "output_type": "stream",
      "text": [
       "Accessing data...\n",
-      "Full eye position dataset shape is: (43350,)\n",
-      "Full neural dataset shape is: (43350, 93122)\n",
-      "Truncated dataset shapes are:\n",
-      "             eye_pos_l: (1000,)\n",
-      "             eye_pos_r: (1000,)\n",
-      "             neural: (15000, 10000)\n",
-      "Data accessed.\n",
-      "eye_posf1_221027_eye_pos.npz_left loaded.\n",
-      "eye_posf1_221027_eye_pos.npz_right loaded.\n",
+      "f1_221027_eye_pos.npz_left loaded.\n",
+      "f1_221027_eye_pos.npz_right loaded.\n",
       "f1_221027_dfof.npz loaded.\n"
      ]
     }
    ],
    "source": [
-    "# # Load data \n",
+    "# # Load data for a single fish\n",
     "\n",
-    "# for a single fish\n",
+    "# paths\n",
     "filename = FILENAME\n",
     "filename_trunc = filename.split('/')[-1][:-3] # fish and date only\n",
-    "print(\"Accessing data...\")\n",
+    "data_folder = 'data/'\n",
+    "filename_eye_pos = f'{filename[-12:-3]}_eye_pos.npz'\n",
+    "filename_dfof = f'{filename[-12:-3]}_dfof.npz'\n",
+    "\n",
+    "# choose where in dataset to sample\n",
+    "start, stop = 0, 0+TIMESTEPS\n",
     "\n",
     "# extract eye position and neural data\n",
     "# do not attempt to load the entire file \n",
-    "with h5py.File(filename, 'r') as f:\n",
+    "print(\"Accessing data...\")\n",
     "\n",
-    "    # eye position\n",
-    "    eye_pos_l = f['visuomotor']['eye_pos']['Left']\n",
-    "    eye_pos_r = f['visuomotor']['eye_pos']['Right']\n",
-    "    print(f\"Full eye position dataset shape is: {eye_pos_l.shape}\")\n",
+    "# load data if it is already saved, and LOAD == True\n",
+    "if LOAD == True:\n",
+    "    try:\n",
+    "        eye_pos_l = cebra.load_data(f'{data_folder}{filename_eye_pos}', key=\"eye_pos_l\")\n",
+    "        print(f\"{filename_eye_pos}_left loaded.\")\n",
+    "        eye_pos_r = cebra.load_data(f'{data_folder}{filename_eye_pos}', key=\"eye_pos_r\")\n",
+    "        print(f\"{filename_eye_pos}_right loaded.\")\n",
+    "        neural = cebra.load_data(f'{data_folder}{filename_dfof}', key=\"neural\")\n",
+    "        print(f\"{filename_dfof} loaded.\")\n",
+    "    \n",
+    "    except:\n",
+    "        pass\n",
+    "        print(\"Couldn't load data into CEBRA\")\n",
     "\n",
-    "    # neural \n",
-    "    neural = f['rois']['dfof']\n",
-    "    print(f\"Full neural dataset shape is: {neural.shape}\")\n",
+    "else:\n",
+    "    with h5py.File(filename, 'r') as f:\n",
     "\n",
-    "    # select first TIMESTEPS timesteps and random ROIS rois\n",
-    "    # neural\n",
-    "    neural_indexes = np.sort(\n",
-    "                        np.random.choice(\n",
-    "                                    np.arange(neural.shape[1]), size=ROIS, replace=False\n",
-    "                                    )\n",
-    "                        )\n",
-    "    neural = np.array(neural[:TIMESTEPS, neural_indexes])\n",
+    "        # eye position\n",
+    "        eye_pos_l = f['visuomotor']['eye_pos']['Left']\n",
+    "        eye_pos_r = f['visuomotor']['eye_pos']['Right']\n",
+    "        print(f\"Full eye position dataset shape is: {eye_pos_l.shape}\")\n",
     "\n",
-    "    # eye position\n",
-    "    eye_pos_l = np.array(eye_pos_l[:TIMESTEPS])\n",
-    "    eye_pos_r = np.array(eye_pos_r[:TIMESTEPS])\n",
+    "        # neural \n",
+    "        neural = f['rois']['dfof']\n",
+    "        print(f\"Full neural dataset shape is: {neural.shape}\")\n",
     "\n",
-    "    print(f\"Truncated dataset shapes are:\\n \\\n",
-    "            eye_pos_l: {eye_pos_l.shape}\\n \\\n",
-    "            eye_pos_r: {eye_pos_r.shape}\\n \\\n",
-    "            neural: {neural.shape}\")\n",
+    "        # select first TIMESTEPS timesteps and random ROIS rois\n",
+    "        # neural\n",
+    "        neural_indexes = np.sort(\n",
+    "                            np.random.choice(\n",
+    "                                        np.arange(neural.shape[1]), size=ROIS, replace=False\n",
+    "                                        )\n",
+    "                            )\n",
+    "        neural = np.array(neural[start:stop, neural_indexes])\n",
     "\n",
-    "    assert(neural.shape == (TIMESTEPS, ROIS))\n",
+    "        # eye position\n",
+    "        eye_pos_l = np.array(eye_pos_l[start:stop])\n",
+    "        eye_pos_r = np.array(eye_pos_r[start:stop])\n",
     "\n",
+    "        print(f\"Truncated dataset shapes are:\\n \\\n",
+    "                eye_pos_l: {eye_pos_l.shape}\\n \\\n",
+    "                eye_pos_r: {eye_pos_r.shape}\\n \\\n",
+    "                neural: {neural.shape}\")\n",
     "\n",
-    "    # save datasets\n",
-    "    filename_eye_pos = f'{filename[-12:-3]}_eye_pos.npz'\n",
-    "    filename_dfof = f'{filename[-12:-3]}_dfof.npz'\n",
-    "    np.savez(f'{filename_eye_pos}', eye_pos_l=eye_pos_l, eye_pos_r=eye_pos_r)\n",
-    "    np.savez(f'{filename_dfof}', neural=neural)\n",
+    "        assert(neural.shape == (TIMESTEPS, ROIS))\n",
+    "        assert(eye_pos_l.shape) == (TIMESTEPS,)\n",
+    "        assert(eye_pos_r.shape) == (TIMESTEPS,)\n",
     "\n",
-    "print(\"Data accessed.\")\n",
+    "        # save datasets\n",
+    "        np.savez(f'{data_folder}{filename_eye_pos}', eye_pos_l=eye_pos_l, eye_pos_r=eye_pos_r)\n",
+    "        np.savez(f'{data_folder}{filename_dfof}', neural=neural)\n",
     "\n",
-    "eye_pos_l = cebra.load_data(filename_eye_pos, key=\"eye_pos_l\")\n",
-    "print(f\"{filename_eye_pos}_left loaded.\")\n",
-    "eye_pos_r = cebra.load_data(filename_eye_pos, key=\"eye_pos_r\")\n",
-    "print(f\"{filename_eye_pos}_right loaded.\")\n",
-    "neural = cebra.load_data(filename_dfof, key=\"neural\")\n",
-    "print(f\"{filename_dfof} loaded.\")\n",
-    "\n",
-    "\n"
+    "        # load datasets\n",
+    "        print(\"Data accessed.\")\n",
+    "        eye_pos_l = cebra.load_data(f'{data_folder}{filename_eye_pos}', key=\"eye_pos_l\")\n",
+    "        print(f\"{filename_eye_pos}_left loaded.\")\n",
+    "        eye_pos_r = cebra.load_data(filename_eye_pos, key=\"eye_pos_r\")\n",
+    "        print(f\"{filename_eye_pos}_right loaded.\")\n",
+    "        neural = cebra.load_data(f'{data_folder}{filename_dfof}', key=\"neural\")\n",
+    "        print(f\"{filename_dfof} loaded.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "Model loaded.\n"
      ]
     }
    ],
    "source": [
     "# Fit or load model\n",
-    "\n",
     "model_name = f\"{filename_trunc}_time_{TIMESTEPS}points_{ROIS}rois_{ITERS}iters.pt\"\n",
     "model_path = f'models/{model_name}'\n",
     "\n",
-    "if os.path.isfile(model_path):\n",
-    "    cebra.CEBRA.load(model_path)\n",
+    "if LOAD and os.path.isfile(model_path):\n",
+    "    try:\n",
+    "        cebra_time_model = cebra.CEBRA.load(model_path)\n",
+    "        print(\"Model loaded.\")\n",
+    "    except:\n",
+    "        print(\"Could not access model.\")\n",
     "else:\n",
     "    cebra_time_model.fit(neural)\n",
-    "    cebra_time_model.save(model_path)\n"
+    "    cebra_time_model.save(model_path)\n",
+    "    print(\"Model fit and saved.\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +272,7 @@
        "<Axes: xlabel='Steps', ylabel='Temperature'>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -282,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -312,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +338,7 @@
        "Text(0.5, 1.0, 'Right eye position predictions')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -384,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +410,7 @@
        "(-0.2681280145617393, -0.38559055709884715)"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
