--- a/parameter_tuning/memory_testing.ipynb
+++ b/parameter_tuning/memory_testing.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,9 +150,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 43\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[39m# select first TIMESTEPS timesteps and random ROIS rois\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[39m# neural\u001b[39;00m\n\u001b[1;32m     38\u001b[0m neural_indexes \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msort(\n\u001b[1;32m     39\u001b[0m                     np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice(\n\u001b[1;32m     40\u001b[0m                                 np\u001b[39m.\u001b[39marange(neural\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]), size\u001b[39m=\u001b[39mROIS, replace\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m\n\u001b[1;32m     41\u001b[0m                                 )\n\u001b[1;32m     42\u001b[0m                     )\n\u001b[0;32m---> 43\u001b[0m neural \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray(neural[start:stop, neural_indexes])\n\u001b[1;32m     44\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mLoaded neural dataset of shape: \u001b[39m\u001b[39m{\u001b[39;00mneural\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     46\u001b[0m \u001b[39massert\u001b[39;00m(neural\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m (TIMESTEPS, ROIS))\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    }
+   ],
    "source": [
     "# Incrementally load more data and fit models\n",
     "\n",
@@ -219,10 +231,14 @@
     "                cebra_time_model.fit(neural)\n",
     "                cebra_time_model.save(model_path)\n",
     "                print(f\"Model fit and saved for neural dataset of shape {neural.shape}.\")\n",
+    "\n",
+    "            timesteps += 1000\n",
     "    \n",
     "    except Exception as e:\n",
     "        print(e)\n",
-    "        f.close()\n"
+    "        f.close()\n",
+    "        exit()\n",
+    "\n"
    ]
   }
  ],
