--- a/test_notebooks/decode_eye_pos_time_contrastive.ipynb
+++ b/test_notebooks/decode_eye_pos_time_contrastive.ipynb
@@ -67,8 +67,8 @@
     "FILENAME = dat_files[0]\n",
     "TIMESTEPS = 15000\n",
     "ROIS = 10000\n",
-    "ITERS = 15000\n",
-    "LOAD = True"
+    "ITERS = 2000\n",
+    "LOAD = False"
    ]
   },
   {
@@ -80,9 +80,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CEBRA(conditional='time', learning_rate=0.0001, max_iterations=15000,\n",
-      "      model_architecture='offset10-model', output_dimension=3,\n",
-      "      temperature_mode='auto', time_offsets=10, verbose=True)\n"
+      "CEBRA(batch_size=1024, conditional='time', learning_rate=0.0001,\n",
+      "      max_iterations=2000, model_architecture='offset10-model',\n",
+      "      output_dimension=3, temperature_mode='auto', time_offsets=10,\n",
+      "      verbose=True)\n"
      ]
     }
    ],
@@ -98,14 +99,14 @@
     "    time_offsets=10,\n",
     "    max_iterations=ITERS,\n",
     "    max_adapt_iterations=500,\n",
-    "    batch_size=None,\n",
+    "    batch_size=1024,\n",
     "    learning_rate=1e-4,\n",
     "    output_dimension=3,\n",
     "    verbose=True,\n",
     "    num_hidden_units=32,\n",
     "    hybrid=False\n",
     "    )\n",
-    "print(cebra_time_model)\n"
+    "print(cebra_time_model)"
    ]
   },
   {
@@ -118,9 +119,29 @@
      "output_type": "stream",
      "text": [
       "Accessing data...\n",
-      "f1_221027_eye_pos.npz_left loaded.\n",
-      "f1_221027_eye_pos.npz_right loaded.\n",
-      "f1_221027_dfof.npz loaded.\n"
+      "Full eye position dataset shape is: (43350,)\n",
+      "Full neural dataset shape is: (43350, 93122)\n",
+      "Truncated dataset shapes are:\n",
+      "                 eye_pos_l: (15000,)\n",
+      "                 eye_pos_r: (15000,)\n",
+      "                 neural: (15000, 10000)\n",
+      "Data accessed.\n",
+      "f1_221027_eye_pos.npz_left loaded.\n"
+     ]
+    },
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'f1_221027_eye_pos.npz'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 73\u001b[0m\n\u001b[1;32m     71\u001b[0m eye_pos_l \u001b[39m=\u001b[39m cebra\u001b[39m.\u001b[39mload_data(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mdata_folder\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mfilename_eye_pos\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m, key\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39meye_pos_l\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     72\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfilename_eye_pos\u001b[39m}\u001b[39;00m\u001b[39m_left loaded.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[0;32m---> 73\u001b[0m eye_pos_r \u001b[39m=\u001b[39m cebra\u001b[39m.\u001b[39;49mload_data(filename_eye_pos, key\u001b[39m=\u001b[39;49m\u001b[39m\"\u001b[39;49m\u001b[39meye_pos_r\u001b[39;49m\u001b[39m\"\u001b[39;49m)\n\u001b[1;32m     74\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00mfilename_eye_pos\u001b[39m}\u001b[39;00m\u001b[39m_right loaded.\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     75\u001b[0m neural \u001b[39m=\u001b[39m cebra\u001b[39m.\u001b[39mload_data(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39m{\u001b[39;00mdata_folder\u001b[39m}\u001b[39;00m\u001b[39m{\u001b[39;00mfilename_dfof\u001b[39m}\u001b[39;00m\u001b[39m'\u001b[39m, key\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mneural\u001b[39m\u001b[39m\"\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/czebra/lib/python3.8/site-packages/cebra/data/load.py:661\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, key, columns)\u001b[0m\n\u001b[1;32m    659\u001b[0m file_ending \u001b[39m=\u001b[39m pathlib\u001b[39m.\u001b[39mPath(file)\u001b[39m.\u001b[39msuffix\n\u001b[1;32m    660\u001b[0m loader \u001b[39m=\u001b[39m _get_loader(file_ending)\n\u001b[0;32m--> 661\u001b[0m data \u001b[39m=\u001b[39m loader\u001b[39m.\u001b[39;49mload(file, key\u001b[39m=\u001b[39;49mkey, columns\u001b[39m=\u001b[39;49mcolumns)\n\u001b[1;32m    662\u001b[0m \u001b[39mreturn\u001b[39;00m data\n",
+      "File \u001b[0;32m~/miniconda3/envs/czebra/lib/python3.8/site-packages/cebra/data/load.py:136\u001b[0m, in \u001b[0;36m_NumpyZipLoader.load\u001b[0;34m(file, key, columns)\u001b[0m\n\u001b[1;32m    131\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload\u001b[39m(\n\u001b[1;32m    132\u001b[0m     file: Union[\u001b[39mstr\u001b[39m, pathlib\u001b[39m.\u001b[39mPath],\n\u001b[1;32m    133\u001b[0m     key: Optional[Union[\u001b[39mstr\u001b[39m, \u001b[39mint\u001b[39m]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    134\u001b[0m     columns: Optional[\u001b[39mlist\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    135\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m npt\u001b[39m.\u001b[39mNDArray:\n\u001b[0;32m--> 136\u001b[0m     loaded_zip \u001b[39m=\u001b[39m _NumpyLoader\u001b[39m.\u001b[39;49mload(file, key)\n\u001b[1;32m    137\u001b[0m     \u001b[39mif\u001b[39;00m key \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    138\u001b[0m         \u001b[39mif\u001b[39;00m key \u001b[39min\u001b[39;00m loaded_zip\u001b[39m.\u001b[39mfiles:\n",
+      "File \u001b[0;32m~/miniconda3/envs/czebra/lib/python3.8/site-packages/cebra/data/load.py:119\u001b[0m, in \u001b[0;36m_NumpyLoader.load\u001b[0;34m(file, key, columns)\u001b[0m\n\u001b[1;32m    113\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mload\u001b[39m(\n\u001b[1;32m    114\u001b[0m     file: Union[\u001b[39mstr\u001b[39m, pathlib\u001b[39m.\u001b[39mPath],\n\u001b[1;32m    115\u001b[0m     key: Optional[Union[\u001b[39mstr\u001b[39m, \u001b[39mint\u001b[39m]] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    116\u001b[0m     columns: Optional[\u001b[39mlist\u001b[39m] \u001b[39m=\u001b[39m \u001b[39mNone\u001b[39;00m,\n\u001b[1;32m    117\u001b[0m ) \u001b[39m-\u001b[39m\u001b[39m>\u001b[39m npt\u001b[39m.\u001b[39mNDArray:\n\u001b[1;32m    118\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 119\u001b[0m         loaded_array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49mload(file)\n\u001b[1;32m    120\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mValueError\u001b[39;00m:\n\u001b[1;32m    121\u001b[0m         loaded_array \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mload(file, allow_pickle\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/czebra/lib/python3.8/site-packages/numpy/lib/npyio.py:405\u001b[0m, in \u001b[0;36mload\u001b[0;34m(file, mmap_mode, allow_pickle, fix_imports, encoding, max_header_size)\u001b[0m\n\u001b[1;32m    403\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mFalse\u001b[39;00m\n\u001b[1;32m    404\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 405\u001b[0m     fid \u001b[39m=\u001b[39m stack\u001b[39m.\u001b[39menter_context(\u001b[39mopen\u001b[39;49m(os_fspath(file), \u001b[39m\"\u001b[39;49m\u001b[39mrb\u001b[39;49m\u001b[39m\"\u001b[39;49m))\n\u001b[1;32m    406\u001b[0m     own_fid \u001b[39m=\u001b[39m \u001b[39mTrue\u001b[39;00m\n\u001b[1;32m    408\u001b[0m \u001b[39m# Code to distinguish from NumPy binary files and pickles.\u001b[39;00m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'f1_221027_eye_pos.npz'"
      ]
     }
    ],
@@ -197,7 +218,7 @@
     "        print(\"Data accessed.\")\n",
     "        eye_pos_l = cebra.load_data(f'{data_folder}{filename_eye_pos}', key=\"eye_pos_l\")\n",
     "        print(f\"{filename_eye_pos}_left loaded.\")\n",
-    "        eye_pos_r = cebra.load_data(filename_eye_pos, key=\"eye_pos_r\")\n",
+    "        eye_pos_r = cebra.load_data(f'{data_folder}{filename_eye_pos}', key=\"eye_pos_r\")\n",
     "        print(f\"{filename_eye_pos}_right loaded.\")\n",
     "        neural = cebra.load_data(f'{data_folder}{filename_dfof}', key=\"neural\")\n",
     "        print(f\"{filename_dfof} loaded.\")"
