End of first week - first attempt at decoding

--- a/archived_code/test_code_snippets.ipynb
+++ b/archived_code/test_code_snippets.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Small snippets of code, mainly for understanding programming concepts"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Bitwise XOR operations"
    ]
   },
@@ -121,6 +128,58 @@
     "a = np.array([1,1,1,1])\n",
     "b = np.array([4,1,1,4])\n",
     "np.bitwise_xor.accumulate(a)|a"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Column stack"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remember to create an array containing both variables\n",
+    "post_left_spot = np.arange(3)\n",
+    "post_right_spot = np.arange(3)\n",
+    "post_spot = np.column_stack([post_left_spot, post_right_spot])\n",
+    "post_spot.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Add and multiply"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m a \u001b[39m=\u001b[39m [\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m]\n\u001b[1;32m      2\u001b[0m b \u001b[39m=\u001b[39m [\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m0\u001b[39m,\u001b[39m1\u001b[39m,\u001b[39m1\u001b[39m]\n\u001b[0;32m----> 3\u001b[0m a \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39mmultiply(a,\u001b[39m2\u001b[39m)\n\u001b[1;32m      4\u001b[0m np\u001b[39m.\u001b[39madd(a,b)\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'np' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "a = [0,0,0,1,0,0,0]\n",
+    "b = [1,1,0,0,0,1,1]\n",
+    "a = np.multiply(a,2)\n",
+    "np.add(a,b)\n",
+    "\n"
    ]
   }
  ],
