--- a/parameter_tuning/memory_testing.ipynb
+++ b/parameter_tuning/memory_testing.ipynb
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -160,8 +160,19 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[4], line 43\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[39m# select first TIMESTEPS timesteps and random ROIS rois\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[39m# neural\u001b[39;00m\n\u001b[1;32m     38\u001b[0m neural_indexes \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msort(\n\u001b[1;32m     39\u001b[0m                     np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice(\n\u001b[1;32m     40\u001b[0m                                 np\u001b[39m.\u001b[39marange(neural\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]), size\u001b[39m=\u001b[39mROIS, replace\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m\n\u001b[1;32m     41\u001b[0m                                 )\n\u001b[1;32m     42\u001b[0m                     )\n\u001b[0;32m---> 43\u001b[0m neural \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39;49marray(neural[start:stop, neural_indexes])\n\u001b[1;32m     44\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mLoaded neural dataset of shape: \u001b[39m\u001b[39m{\u001b[39;00mneural\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     46\u001b[0m \u001b[39massert\u001b[39;00m(neural\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m (TIMESTEPS, ROIS))\n",
+      "Cell \u001b[0;32mIn[5], line 43\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[39m# select first TIMESTEPS timesteps and random ROIS rois\u001b[39;00m\n\u001b[1;32m     37\u001b[0m \u001b[39m# neural\u001b[39;00m\n\u001b[1;32m     38\u001b[0m neural_indexes \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39msort(\n\u001b[1;32m     39\u001b[0m                     np\u001b[39m.\u001b[39mrandom\u001b[39m.\u001b[39mchoice(\n\u001b[1;32m     40\u001b[0m                                 np\u001b[39m.\u001b[39marange(neural\u001b[39m.\u001b[39mshape[\u001b[39m1\u001b[39m]), size\u001b[39m=\u001b[39mROIS, replace\u001b[39m=\u001b[39m\u001b[39mFalse\u001b[39;00m\n\u001b[1;32m     41\u001b[0m                                 )\n\u001b[1;32m     42\u001b[0m                     )\n\u001b[0;32m---> 43\u001b[0m neural \u001b[39m=\u001b[39m np\u001b[39m.\u001b[39marray(neural[start:stop, neural_indexes])\n\u001b[1;32m     44\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mLoaded neural dataset of shape: \u001b[39m\u001b[39m{\u001b[39;00mneural\u001b[39m.\u001b[39mshape\u001b[39m}\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     46\u001b[0m \u001b[39massert\u001b[39;00m(neural\u001b[39m.\u001b[39mshape \u001b[39m==\u001b[39m (TIMESTEPS, ROIS))\n",
+      "File \u001b[0;32mh5py/_objects.pyx:54\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32mh5py/_objects.pyx:55\u001b[0m, in \u001b[0;36mh5py._objects.with_phil.wrapper\u001b[0;34m()\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/czebra/lib/python3.8/site-packages/h5py/_hl/dataset.py:758\u001b[0m, in \u001b[0;36mDataset.__getitem__\u001b[0;34m(self, args, new_dtype)\u001b[0m\n\u001b[1;32m    756\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_fast_read_ok \u001b[39mand\u001b[39;00m (new_dtype \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m):\n\u001b[1;32m    757\u001b[0m     \u001b[39mtry\u001b[39;00m:\n\u001b[0;32m--> 758\u001b[0m         \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_fast_reader\u001b[39m.\u001b[39;49mread(args)\n\u001b[1;32m    759\u001b[0m     \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m    760\u001b[0m         \u001b[39mpass\u001b[39;00m  \u001b[39m# Fall back to Python read pathway below\u001b[39;00m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
@@ -220,7 +231,7 @@
     "\n",
     "            # load dataset\n",
     "            neural = cebra.load_data(f'{data_folder}{filename_dfof}', key=\"neural\")\n",
-    "            print(f\"Loaded neural dataset of shape {neural.shape}.\\n\")\n",
+    "            print(f\"Loaded neural dataset of shape {neural.shape} into CEBRA.\\n\")\n",
     "\n",
     "            \n",
     "            # train and save the model\n",
@@ -232,7 +243,7 @@
     "                cebra_time_model.save(model_path)\n",
     "                print(f\"Model fit and saved for neural dataset of shape {neural.shape}.\")\n",
     "\n",
-    "            timesteps += 1000\n",
+    "        timesteps += 1000\n",
     "    \n",
     "    except Exception as e:\n",
     "        print(e)\n",
